--- a/reactstrap/src/App.css
+++ b/reactstrap/src/App.css
@@ -31,3 +31,16 @@
     transform: rotate(360deg);
   }
 }
+
+.historyItem{
+  list-style-type: none;
+  border: 1px solid #f9e5ad;
+  margin: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: #f7e8bc70;
+}
+.col{
+  display: inline-block;
+  margin: 40px; 
+}
